# soRai

./: .gitignore  CHANGELOG.md  README.md
content-engine/: README.md  manifest.json
content-engine-service/: README.md  pyproject.toml
content-engine-service/backend/: README.md  manage.py
content-engine-service/backend/config/: __init__.py  settings.py  urls.py  views.py
content-engine-service/backend/tests/: test_django_bridge.py
content-engine-service/panel/: README.md  app.js  index.html  styles.css
content-engine-service/src/content_engine_service/: __init__.py  access_policy.py  api_auth.py  api_server.py  boundary_validator.py  cli.py  frontmatter.py  lane_adapter.py  profiles_registry.py  run_pipeline.py  run_types.py  sink_adapter.py  store.py
content-engine-service/tests/: test_access_policy.py  test_api_auth.py  test_api_server.py  test_cli.py  test_frontmatter.py  test_lane_adapter.py  test_panel_interactions.py  test_panel_scaffold.py  test_profiles_registry.py  test_run_pipeline.py  test_store.py
content-engine-service/tests/fixtures/: fake_runner.py
content-engine/core/: SKILL.template.md  graph-query.md  pipeline.md  platform-formatting.md
content-engine/core/references/: quality-checklist.md
content-engine/core/sinks/: borai-inbox.md  workspace-files.md
content-engine/lib/: render.sh
content-engine/profiles/build-in-public/: post-type-specs.md  profile.toml  voice-profile.md
content-engine/profiles/general/: content-type-specs.md  profile.toml  (+1 more)
content-engine/tests/: run_all.sh  test_frontmatter.sh  test_render.sh
