[project]
name = "sorai-content-engine-service"
version = "0.1.0"
description = "Library checkpoint for running soRai content-engine profiles."
requires-python = ">=3.11"

[project.scripts]
sorai-content-engine-service = "content_engine_service.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_engine_service"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
